data/diff_tests/wasmtime/unreachable_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1699.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\00\01\7f\60\00\00\02\9b\80\80\80\00\02\03\6d\6f"
    "\64\06\66\75\6e\63\5f\61\00\00\03\6d\6f\64\06\66"
    "\75\6e\63\5f\62\00\00\03\82\80\80\80\00\01\01\0a"
    "\91\80\80\80\00\01\8b\80\80\80\00\00\02\40\10\00"
    "\00\10\01\00\0b\0b"
  )
""
)